--- a/hosts.testing/kirils-hosts.1
+++ b/hosts.testing/kirils-hosts.1
@@ -3900,123 +3900,123 @@ ff02::2    ip6-allrouters
 0.0.0.0 z.moatads.com
 
 # spotify-ad-hosts <https://raw.githubusercontent.com/theinfiniterick/spotify-ad-hosts/master/hosts.txt>
-0.0.0.0 163-172-209-161.rev.poneytelecom.eu
-0.0.0.0 a1.audio-ak.cdn.spotify.com
-0.0.0.0 accalia.ap.spotify.com
-0.0.0.0 accalia.ash.spotify.com
-0.0.0.0 accalia.ash1.spotify.com
-0.0.0.0 ad.atdmt.com
-0.0.0.0 ad.audio-ak.cdn.spotify.com
-0.0.0.0 ad3.adfarm1.adition.com
-0.0.0.0 adlab.spotify.com
-0.0.0.0 adlog.spotify.com
-0.0.0.0 adobe-dns-2.spotify.com
-0.0.0.0 ads-static.saymedia.com
-0.0.0.0 ads.54646.co
-0.0.0.0 ads.bizhut.com
-0.0.0.0 ads.spotify.com
-0.0.0.0 adserver-as.adtech.advertising.com
-0.0.0.0 adstudio-help.spotify.com
-0.0.0.0 ae.audio-ak.cdn.spotify.com
-0.0.0.0 af.audio-ak.cdn.spotify.com
-0.0.0.0 afton.ap.spotify.com
-0.0.0.0 agnes.ap.spotify.com
-0.0.0.0 ahava.ap.spotify.com
-0.0.0.0 audio-fab.spotify.com
-0.0.0.0 audio-fac-spotify.com
-0.0.0.0 audio-fac.spotify.com
-#0.0.0.0 audio-sp-lon.spotify.com
-#0.0.0.0 audio-sp-sto.spotify.com
-#0.0.0.0 audio2.spotify.com
-0.0.0.0 media-match.com
-0.0.0.0 auditdesk-server.spotify.com
-0.0.0.0 austin.logs.roku.com
-0.0.0.0 be.ads.justpremium.com
-0.0.0.0 bengta.lon.spotify.com
-0.0.0.0 bengta.lon2.spotify.com
-0.0.0.0 berdine.ash.spotify.com
-0.0.0.0 berdine.ash1.spotify.com
-0.0.0.0 beta.developer.spotify.com
-0.0.0.0 beta.spotify.com
-0.0.0.0 beta.static.tune.com
-0.0.0.0 bf.audio-ak.cdn.spotify.com
-0.0.0.0 bid.g.doubleclick.net
-0.0.0.0 bloodhound.spotify.com
-0.0.0.0 bug.spotify.com
-0.0.0.0 bugzilla-001.lon.spotify.com
-0.0.0.0 bundling-integration.spotify.com
-0.0.0.0 cdn.tellwrite.com
-0.0.0.0 christopher.lon.spotify.com
-0.0.0.0 crashdump-001.lon.spotify.com
-0.0.0.0 crashdump.sto.spotify.com
-0.0.0.0 desktop.spotify.com
-0.0.0.0 devnews.spotify.com
-0.0.0.0 dt.adsafeprotected.com
-0.0.0.0 exp-canary.wg.spotify.com
-0.0.0.0 exp.wg.spotify.com
-0.0.0.0 ffcampaign.spotify.com
-0.0.0.0 full-cdn-01.cluster001.ovh.net
-0.0.0.0 full-cdn-01.cluster002.ovh.net
-0.0.0.0 fw.adsafeprotected.com
-# 0.0.0.0 gew1.ap.spotify.com
-0.0.0.0 googletagservices.com
-0.0.0.0 gs5j7zyhogb53dmqmjfqljsq2ykksm3.spotify.com
-0.0.0.0 guc-dealer-ssl.spotify.com
-0.0.0.0 guc-dealer.spotify.com
-# 0.0.0.0 guc-spclient.spotify.com
-0.0.0.0 heads-ecb.spotify.com
-0.0.0.0 heads-ecp.spotify.com
-0.0.0.0 heads-l3.spotify.com
-0.0.0.0 heather.ap.spotify.com
-0.0.0.0 idsync-ext.rlcdn.com
-0.0.0.0 indosatooredoo.spotify.com
-0.0.0.0 investors.spotify.com
-0.0.0.0 iria.ash.spotify.com
-0.0.0.0 iria.ash1.spotify.com
-0.0.0.0 kismet.ap.spotify.com
-0.0.0.0 kismet.ash.spotify.com
-0.0.0.0 kismet.ash1.spotify.com
-0.0.0.0 klara.lon.spotify.com
-0.0.0.0 labels-canary.spotify.com
-0.0.0.0 oktascimpoc.spotify.com
-0.0.0.0 oktascimserver-test.spotify.com
-0.0.0.0 oktascimserver.spotify.com
-0.0.0.0 omaze.com
-0.0.0.0 partnerportal.spotify.com
-0.0.0.0 pay-testing.spotify.com
-0.0.0.0 pl35t7bb4aabglvz2i3btceznecjh4fka7m6ppyzdthifgcq.obfxt53kpvuicjyib3vacc5db3htskgk62k5tsonipsj2pty.yoyjueb2cieypg5vnrb5jpkuf52xxafpqf4ecynqzuz6s42t.tiox3ktdzfwwbcokrxi6o7huoya6iogdfo7ktcsdhkxakyjw.sg7cexr7o7b2d6ms.er.spo.spotify.com
-0.0.0.0 secure-gg.imrworldwide.com
-0.0.0.0 secure.insightexpressai.com
-0.0.0.0 shulamit.ash1.spotify.com
-0.0.0.0 sienna.ap.spotify.com
-0.0.0.0 sienna.sto.spotify.com
-0.0.0.0 sigrid.lon.spotify.com
-0.0.0.0 sirkka.lon.spotify.com
-0.0.0.0 sirkka.lon2.spotify.com
-0.0.0.0 skye.ap.spotify.com
-0.0.0.0 skye.sto.spotify.com
-0.0.0.0 smartling-001.lon.spotify.com
-0.0.0.0 smartling-001.lon2.spotify.com
-0.0.0.0 speech-recognition-test.spotify.com
-0.0.0.0 speech-recognition.spotify.com
-0.0.0.0 spotify-desktop.com
-0.0.0.0 star-z-mini.c10r.facebook.com
-0.0.0.0 sto3.spotify.com
-0.0.0.0 sync.adaptv.advertising.com
-0.0.0.0 techattend.com
-0.0.0.0 track.clearsender.com
-#0.0.0.0 u.scdn.co
-0.0.0.0 upgrade.scdn.co#optional
-0.0.0.0 upgrade.spotify.com#optional
-#0.0.0.0 video-fa-b.cdn.spotify.com
-#0.0.0.0 video-fa.cdn.spotify.com
-#0.0.0.0 video-fa.spotify.com
-0.0.0.0 vpn-ash1-1.ash.spotify.com
-0.0.0.0 vpn-lon-001.lon.spotify.com
-0.0.0.0 weblb-wg.gslb.spotify.com
-#0.0.0.0 www.audio2.spotify.com
-0.0.0.0 www.codequest.spotify.com
-0.0.0.0 www.contest.codequest.spotify.com
-0.0.0.0 www.interia.pl
-0.0.0.0 www.omaze.com
-0.0.0.0 www.spotify-desktop.com
+# 0.0.0.0 163-172-209-161.rev.poneytelecom.eu
+# 0.0.0.0 a1.audio-ak.cdn.spotify.com
+# 0.0.0.0 accalia.ap.spotify.com
+# 0.0.0.0 accalia.ash.spotify.com
+# 0.0.0.0 accalia.ash1.spotify.com
+# 0.0.0.0 ad.atdmt.com
+# 0.0.0.0 ad.audio-ak.cdn.spotify.com
+# 0.0.0.0 ad3.adfarm1.adition.com
+# 0.0.0.0 adlab.spotify.com
+# 0.0.0.0 adlog.spotify.com
+# 0.0.0.0 adobe-dns-2.spotify.com
+# 0.0.0.0 ads-static.saymedia.com
+# 0.0.0.0 ads.54646.co
+# 0.0.0.0 ads.bizhut.com
+# 0.0.0.0 ads.spotify.com
+# 0.0.0.0 adserver-as.adtech.advertising.com
+# 0.0.0.0 adstudio-help.spotify.com
+# 0.0.0.0 ae.audio-ak.cdn.spotify.com
+# 0.0.0.0 af.audio-ak.cdn.spotify.com
+# 0.0.0.0 afton.ap.spotify.com
+# 0.0.0.0 agnes.ap.spotify.com
+# 0.0.0.0 ahava.ap.spotify.com
+# 0.0.0.0 audio-fab.spotify.com
+# 0.0.0.0 audio-fac-spotify.com
+# 0.0.0.0 audio-fac.spotify.com
+# #0.0.0.0 audio-sp-lon.spotify.com
+# #0.0.0.0 audio-sp-sto.spotify.com
+# #0.0.0.0 audio2.spotify.com
+# 0.0.0.0 media-match.com
+# 0.0.0.0 auditdesk-server.spotify.com
+# 0.0.0.0 austin.logs.roku.com
+# 0.0.0.0 be.ads.justpremium.com
+# 0.0.0.0 bengta.lon.spotify.com
+# 0.0.0.0 bengta.lon2.spotify.com
+# 0.0.0.0 berdine.ash.spotify.com
+# 0.0.0.0 berdine.ash1.spotify.com
+# 0.0.0.0 beta.developer.spotify.com
+# 0.0.0.0 beta.spotify.com
+# 0.0.0.0 beta.static.tune.com
+# 0.0.0.0 bf.audio-ak.cdn.spotify.com
+# 0.0.0.0 bid.g.doubleclick.net
+# 0.0.0.0 bloodhound.spotify.com
+# 0.0.0.0 bug.spotify.com
+# 0.0.0.0 bugzilla-001.lon.spotify.com
+# 0.0.0.0 bundling-integration.spotify.com
+# 0.0.0.0 cdn.tellwrite.com
+# 0.0.0.0 christopher.lon.spotify.com
+# 0.0.0.0 crashdump-001.lon.spotify.com
+# 0.0.0.0 crashdump.sto.spotify.com
+# 0.0.0.0 desktop.spotify.com
+# 0.0.0.0 devnews.spotify.com
+# 0.0.0.0 dt.adsafeprotected.com
+# 0.0.0.0 exp-canary.wg.spotify.com
+# 0.0.0.0 exp.wg.spotify.com
+# 0.0.0.0 ffcampaign.spotify.com
+# 0.0.0.0 full-cdn-01.cluster001.ovh.net
+# 0.0.0.0 full-cdn-01.cluster002.ovh.net
+# 0.0.0.0 fw.adsafeprotected.com
+# # 0.0.0.0 gew1.ap.spotify.com
+# 0.0.0.0 googletagservices.com
+# 0.0.0.0 gs5j7zyhogb53dmqmjfqljsq2ykksm3.spotify.com
+# 0.0.0.0 guc-dealer-ssl.spotify.com
+# 0.0.0.0 guc-dealer.spotify.com
+# # 0.0.0.0 guc-spclient.spotify.com
+# 0.0.0.0 heads-ecb.spotify.com
+# 0.0.0.0 heads-ecp.spotify.com
+# 0.0.0.0 heads-l3.spotify.com
+# 0.0.0.0 heather.ap.spotify.com
+# 0.0.0.0 idsync-ext.rlcdn.com
+# 0.0.0.0 indosatooredoo.spotify.com
+# 0.0.0.0 investors.spotify.com
+# 0.0.0.0 iria.ash.spotify.com
+# 0.0.0.0 iria.ash1.spotify.com
+# 0.0.0.0 kismet.ap.spotify.com
+# 0.0.0.0 kismet.ash.spotify.com
+# 0.0.0.0 kismet.ash1.spotify.com
+# 0.0.0.0 klara.lon.spotify.com
+# 0.0.0.0 labels-canary.spotify.com
+# 0.0.0.0 oktascimpoc.spotify.com
+# 0.0.0.0 oktascimserver-test.spotify.com
+# 0.0.0.0 oktascimserver.spotify.com
+# 0.0.0.0 omaze.com
+# 0.0.0.0 partnerportal.spotify.com
+# 0.0.0.0 pay-testing.spotify.com
+# 0.0.0.0 pl35t7bb4aabglvz2i3btceznecjh4fka7m6ppyzdthifgcq.obfxt53kpvuicjyib3vacc5db3htskgk62k5tsonipsj2pty.yoyjueb2cieypg5vnrb5jpkuf52xxafpqf4ecynqzuz6s42t.tiox3ktdzfwwbcokrxi6o7huoya6iogdfo7ktcsdhkxakyjw.sg7cexr7o7b2d6ms.er.spo.spotify.com
+# 0.0.0.0 secure-gg.imrworldwide.com
+# 0.0.0.0 secure.insightexpressai.com
+# 0.0.0.0 shulamit.ash1.spotify.com
+# 0.0.0.0 sienna.ap.spotify.com
+# 0.0.0.0 sienna.sto.spotify.com
+# 0.0.0.0 sigrid.lon.spotify.com
+# 0.0.0.0 sirkka.lon.spotify.com
+# 0.0.0.0 sirkka.lon2.spotify.com
+# 0.0.0.0 skye.ap.spotify.com
+# 0.0.0.0 skye.sto.spotify.com
+# 0.0.0.0 smartling-001.lon.spotify.com
+# 0.0.0.0 smartling-001.lon2.spotify.com
+# 0.0.0.0 speech-recognition-test.spotify.com
+# 0.0.0.0 speech-recognition.spotify.com
+# 0.0.0.0 spotify-desktop.com
+# 0.0.0.0 star-z-mini.c10r.facebook.com
+# 0.0.0.0 sto3.spotify.com
+# 0.0.0.0 sync.adaptv.advertising.com
+# 0.0.0.0 techattend.com
+# 0.0.0.0 track.clearsender.com
+# #0.0.0.0 u.scdn.co
+# 0.0.0.0 upgrade.scdn.co#optional
+# 0.0.0.0 upgrade.spotify.com#optional
+# #0.0.0.0 video-fa-b.cdn.spotify.com
+# #0.0.0.0 video-fa.cdn.spotify.com
+# #0.0.0.0 video-fa.spotify.com
+# 0.0.0.0 vpn-ash1-1.ash.spotify.com
+# 0.0.0.0 vpn-lon-001.lon.spotify.com
+# 0.0.0.0 weblb-wg.gslb.spotify.com
+# #0.0.0.0 www.audio2.spotify.com
+# 0.0.0.0 www.codequest.spotify.com
+# 0.0.0.0 www.contest.codequest.spotify.com
+# 0.0.0.0 www.interia.pl
+# 0.0.0.0 www.omaze.com
+# 0.0.0.0 www.spotify-desktop.com
