--- a/hosts.testing/kirils-hosts.3
+++ b/hosts.testing/kirils-hosts.3
@@ -25742,7 +25742,6 @@
 0.0.0.0 static-eu.payments-amazon.com
 0.0.0.0 static.payments-amazon.com
 # allow m.media-amazon.com reason: Required for loading of images on amazon.com
-0.0.0.0 payments-*.amazon.com
 0.0.0.0 payments.amazon.com
 0.0.0.0 pndsn.com
 0.0.0.0 files.acrobat.com
@@ -25803,10 +25802,8 @@
 0.0.0.0 cmp.volkskrant.nl
 0.0.0.0 cookie.vpro.nl
 0.0.0.0 313.nl
-0.0.0.0 *-gdprlock
 0.0.0.0 csp.mbank.pl
 0.0.0.0 privacywall.org
-0.0.0.0 *.privacy-mgmt.com
 0.0.0.0 privacy-mgmt.com
 0.0.0.0 cmp.politico.eu
 0.0.0.0 cookie.vpro.nl
@@ -25954,7 +25951,6 @@
 0.0.0.0 savemysales.co
 # allow shortpixel.ai reason: cdn
 0.0.0.0 xspdf.com
-0.0.0.0 admob-app-id-*.firebaseio.com
 0.0.0.0 mobilenations.com
 0.0.0.0 pzz.io
 0.0.0.0 linkpizza.com
@@ -26286,7 +26282,7 @@
 0.0.0.0 sentry.openbook.social
 0.0.0.0 sentry.svc.tfw.io
 0.0.0.0 sentry.lbry.tech
-0.0.0.0 wms*.zoho.eu
+0.0.0.0 wms.zoho.eu
 0.0.0.0 workdrive.zoho.eu
 0.0.0.0 contacts.zoho.eu
 0.0.0.0 phonebridge.zoho.eu
@@ -32072,7 +32068,7 @@
 0.0.0.0 grid.amap.com
 0.0.0.0 tm.amap.com
 0.0.0.0 is.autonavi.com
-0.0.0.0 mt[0-9]*.google.cn
+0.0.0.0 mt[0-9].google.cn
 0.0.0.0 de.ioam.de
 0.0.0.0 ipsws.indooratlas.com
 0.0.0.0 sdk6.ibm.xtify.com
@@ -32622,7 +32618,7 @@
 0.0.0.0 mandrillapp.com
 0.0.0.0 api.cloudinary.com
 0.0.0.0 pulse.kernstock.net
-0.0.0.0 *.tuisong.baidu.com
+0.0.0.0 .tuisong.baidu.com
 0.0.0.0 push.baidu.com
 0.0.0.0 dp1037.com
 0.0.0.0 zte.home
@@ -34091,85 +34087,85 @@
 0.0.0.0 toolbarqueries.google.com
 0.0.0.0 www-googletagmanager.l.google.com
 0.0.0.0 edgedatg.com
-0.0.0.0 *.bahamut.com.tw
-0.0.0.0 *.hinet.net
+0.0.0.0 .bahamut.com.tw
+0.0.0.0 .hinet.net
 0.0.0.0 d151l6v8er5bdm.cloudfront.net
-0.0.0.0 *.d1sgwhnao7452x.cloudfront.net
-0.0.0.0 *.dazn-api.com
-0.0.0.0 *.dazn.com
-0.0.0.0 *.dazndn.com
-0.0.0.0 *.indazn.com
-0.0.0.0 *.indaznlab.com
-0.0.0.0 *.dzcdn.net
+0.0.0.0 .d1sgwhnao7452x.cloudfront.net
+0.0.0.0 .dazn-api.com
+0.0.0.0 .dazn.com
+0.0.0.0 .dazndn.com
+0.0.0.0 .indazn.com
+0.0.0.0 .indaznlab.com
+0.0.0.0 .dzcdn.net
 0.0.0.0 cdn.unid.go.com
 0.0.0.0 disney.my.sentry.io
 0.0.0.0 global.edge.bamgrid.com
-0.0.0.0 *.disney.demdex.net
+0.0.0.0 .disney.demdex.net
 0.0.0.0 d3c7rimkq79yfu.cloudfront.net
 0.0.0.0 d349g9zuie06uo.cloudfront.net
 0.0.0.0 dmc.nico
-0.0.0.0 *.nicovideo.jp
-0.0.0.0 *.nimg.jp
-0.0.0.0 *.socdm.com
-0.0.0.0 *.pbs.org
-0.0.0.0 *.pandora.com
-0.0.0.0 *.phprcdn.com
-0.0.0.0 *.qobuz.com
-0.0.0.0 *.p-cdn.us
+0.0.0.0 .nicovideo.jp
+0.0.0.0 .nimg.jp
+0.0.0.0 .socdm.com
+0.0.0.0 .pbs.org
+0.0.0.0 .pandora.com
+0.0.0.0 .phprcdn.com
+0.0.0.0 .qobuz.com
+0.0.0.0 .p-cdn.us
 0.0.0.0 hamifans.emome.net
-0.0.0.0 *.skyking.com.tw
-0.0.0.0 *.byteoversea.com
-0.0.0.0 *.ibytedtos.com
-0.0.0.0 *.ipstatp.com
-0.0.0.0 *.jtvnw.net
-0.0.0.0 *.ttvnw.net
+0.0.0.0 .skyking.com.tw
+0.0.0.0 .byteoversea.com
+0.0.0.0 .ibytedtos.com
+0.0.0.0 .ipstatp.com
+0.0.0.0 .jtvnw.net
+0.0.0.0 .ttvnw.net
 0.0.0.0 api.viu.now.com
 0.0.0.0 d1k2us671qcoau.cloudfront.net
 0.0.0.0 d2anahhhmp1ffz.cloudfront.net
 0.0.0.0 dfp6rglgjqszk.cloudfront.net
-0.0.0.0 *.nowe.com
-0.0.0.0 *.viu.com
-0.0.0.0 *.viu.now.com
-0.0.0.0 *.viu.tv
-0.0.0.0 *.bit.no.com
-0.0.0.0 *.btlibrary.me
-0.0.0.0 *.cccat.io
-0.0.0.0 *.cloudcone.com
-0.0.0.0 *.dubox.com
-0.0.0.0 *.gameloft.com
-0.0.0.0 *.garena.com
-0.0.0.0 *.inoreader.com
-0.0.0.0 *.ip138.com
-0.0.0.0 *.ping.pe
-0.0.0.0 *.teddysun.com
-0.0.0.0 *.tumbex.com
-0.0.0.0 *.twdvd.com
-0.0.0.0 *.xn--i2ru8q2qg.com
-0.0.0.0 *.yunpanjingling.com
-0.0.0.0 *.4sqi.net
-0.0.0.0 *.a248.e.akamai.net
-0.0.0.0 *.aolcdn.com
-0.0.0.0 *.bandwagonhost.com
-0.0.0.0 *.cachefly.net
-0.0.0.0 *.cdnst.net
-0.0.0.0 *.comodoca.com
-0.0.0.0 *.daum.net
-0.0.0.0 *.gongm.in
-0.0.0.0 *.io.io
-0.0.0.0 *.ixquick.com
-0.0.0.0 *.jtvnw.net
-0.0.0.0 *.kat.cr
-0.0.0.0 *.live.net
-0.0.0.0 *.livefilestore.com
-0.0.0.0 *.llnwd.net
-0.0.0.0 *.resilio.com
-0.0.0.0 *.sfx.ms
-0.0.0.0 *.smartdnsproxy.com
-0.0.0.0 *.symauth.com
-0.0.0.0 *.symcb.com
-0.0.0.0 *.symcd.com
-0.0.0.0 *.textnow.com
-0.0.0.0 *.app-measurement.net
+0.0.0.0 .nowe.com
+0.0.0.0 .viu.com
+0.0.0.0 .viu.now.com
+0.0.0.0 .viu.tv
+0.0.0.0 .bit.no.com
+0.0.0.0 .btlibrary.me
+0.0.0.0 .cccat.io
+0.0.0.0 .cloudcone.com
+0.0.0.0 .dubox.com
+0.0.0.0 .gameloft.com
+0.0.0.0 .garena.com
+0.0.0.0 .inoreader.com
+0.0.0.0 .ip138.com
+0.0.0.0 .ping.pe
+0.0.0.0 .teddysun.com
+0.0.0.0 .tumbex.com
+0.0.0.0 .twdvd.com
+0.0.0.0 .xn--i2ru8q2qg.com
+0.0.0.0 .yunpanjingling.com
+0.0.0.0 .4sqi.net
+0.0.0.0 .a248.e.akamai.net
+0.0.0.0 .aolcdn.com
+0.0.0.0 .bandwagonhost.com
+0.0.0.0 .cachefly.net
+0.0.0.0 .cdnst.net
+0.0.0.0 .comodoca.com
+0.0.0.0 .daum.net
+0.0.0.0 .gongm.in
+0.0.0.0 .io.io
+0.0.0.0 .ixquick.com
+0.0.0.0 .jtvnw.net
+0.0.0.0 .kat.cr
+0.0.0.0 .live.net
+0.0.0.0 .livefilestore.com
+0.0.0.0 .llnwd.net
+0.0.0.0 .resilio.com
+0.0.0.0 .sfx.ms
+0.0.0.0 .smartdnsproxy.com
+0.0.0.0 .symauth.com
+0.0.0.0 .symcb.com
+0.0.0.0 .symcd.com
+0.0.0.0 .textnow.com
+0.0.0.0 .app-measurement.net
 0.0.0.0 rutracker.org
 0.0.0.0 rutor.info
 0.0.0.0 kinozal.tv
@@ -37724,8 +37720,8 @@
 0.0.0.0 sentry.voipgrid.nl
 0.0.0.0 sidekickai.com
 0.0.0.0 sidekick.la
-0.0.0.0 sidekickopen*.com
-0.0.0.0 t.sidekickopen*.com
+0.0.0.0 sidekickopen.com
+0.0.0.0 t.sidekickopen.com
 0.0.0.0 drive-thirdparty.googleapis.com
 0.0.0.0 drive-thirdparty.googleusercontent.com
 0.0.0.0 onpage.org
@@ -37939,7 +37935,6 @@
 0.0.0.0 wa.gmx.at
 0.0.0.0 einwilligungsspeicher.netid.de
 0.0.0.0 plus.gmx.at
-0.0.0.0 ad*.adfarm*.adition.com
 0.0.0.0 ad11.adfarm1.adition.com
 0.0.0.0 hgc-cf-cache-1.svonm.com
 0.0.0.0 svonm.com
