--- a/hosts.testing/kirils-hosts.1
+++ b/hosts.testing/kirils-hosts.1
@@ -4,7 +4,7 @@
 # - My list
 # - x0uid/SpotifyAdBlock <https://raw.githubusercontent.com/x0uid/SpotifyAdBlock/master/hosts>
 # - theinfiniterick/spotify-ad-hosts <https://raw.githubusercontent.com/theinfiniterick/spotify-ad-hosts/master/hosts.txt>
-# Last Updated: 2023/Jan/23
+# Last Updated: 2023/Jan/24
 127.0.0.1  localhost
 127.0.1.1  orbit.loonaverse	orbit
 ::1        localhost ip6-localhost ip6-loopback
@@ -13,6 +13,11 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 8242311.fls.doubleclick.net
+0.0.0.0 fls.doubleclick.net
+0.0.0.0 adx.ads.vungle.com
+0.0.0.0 ads.vungle.com
+0.0.0.0 vungle.com
 0.0.0.0 broughtenragesince.com # <Malware>
 0.0.0.0 cse.google.com
 0.0.0.0 nexus-websocket-a.intercom.io
@@ -71,7 +76,6 @@ ff02::2    ip6-allrouters
 0.0.0.0 newrelic.com
 # 0.0.0.0 static.2mdn.net # <affects YouTube>
 # 0.0.0.0 tpc.googlesyndication.com
-# 0.0.0.0 https://tpc.googlesyndication.com
 # 0.0.0.0 mc.webvisor.org
 # 0.0.0.0 mc.yandex.com
 # 0.0.0.0 mc.yandex.ru
@@ -3908,15 +3912,15 @@ ff02::2    ip6-allrouters
 # 0.0.0.0 accalia.ash.spotify.com
 # 0.0.0.0 accalia.ash1.spotify.com
 # 0.0.0.0 ad.atdmt.com
-# 0.0.0.0 ad.audio-ak.cdn.spotify.com
-# 0.0.0.0 ad3.adfarm1.adition.com
-# 0.0.0.0 adlab.spotify.com
-# 0.0.0.0 adlog.spotify.com
-# 0.0.0.0 adobe-dns-2.spotify.com
-# 0.0.0.0 ads-static.saymedia.com
-# 0.0.0.0 ads.54646.co
+0.0.0.0 ad.audio-ak.cdn.spotify.com
+0.0.0.0 ad3.adfarm1.adition.com
+0.0.0.0 adlab.spotify.com
+0.0.0.0 adlog.spotify.com
+0.0.0.0 adobe-dns-2.spotify.com
+0.0.0.0 ads-static.saymedia.com
+0.0.0.0 ads.54646.co
 # 0.0.0.0 ads.bizhut.com
-# 0.0.0.0 ads.spotify.com
+0.0.0.0 ads.spotify.com
 # 0.0.0.0 adserver-as.adtech.advertising.com
 # 0.0.0.0 adstudio-help.spotify.com
 # 0.0.0.0 ae.audio-ak.cdn.spotify.com
@@ -3933,7 +3937,7 @@ ff02::2    ip6-allrouters
 # 0.0.0.0 media-match.com
 # 0.0.0.0 auditdesk-server.spotify.com
 # 0.0.0.0 austin.logs.roku.com
-# 0.0.0.0 be.ads.justpremium.com
+0.0.0.0 be.ads.justpremium.com
 # 0.0.0.0 bengta.lon.spotify.com
 # 0.0.0.0 bengta.lon2.spotify.com
 # 0.0.0.0 berdine.ash.spotify.com
@@ -3942,7 +3946,7 @@ ff02::2    ip6-allrouters
 # 0.0.0.0 beta.spotify.com
 # 0.0.0.0 beta.static.tune.com
 # 0.0.0.0 bf.audio-ak.cdn.spotify.com
-# 0.0.0.0 bid.g.doubleclick.net
+0.0.0.0 bid.g.doubleclick.net
 # 0.0.0.0 bloodhound.spotify.com
 # 0.0.0.0 bug.spotify.com
 # 0.0.0.0 bugzilla-001.lon.spotify.com
