--- a/hosts.testing/kirils-hosts.1
+++ b/hosts.testing/kirils-hosts.1
@@ -11,8 +11,8 @@
 ff02::1    ip6-allnodes
 ff02::2    ip6-allrouters
 
-0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 adeventtracker.spotify.com
 0.0.0.0 8242311.fls.doubleclick.net
 0.0.0.0 fls.doubleclick.net
 0.0.0.0 adx.ads.vungle.com
@@ -36,7 +36,7 @@ ff02::2    ip6-allrouters
 0.0.0.0 tracking.intl.miui.com
 0.0.0.0 firebase-settings.crashlytics.com
 0.0.0.0 self.events.data.microsoft.com
-# 0.0.0.0 googleads.g.doubleclick.net
+0.0.0.0 googleads.g.doubleclick.net
 0.0.0.0 udmserve.net
 0.0.0.0 consensu.org
 0.0.0.0 quantcast.mgr.consensu.org
@@ -49,8 +49,8 @@ ff02::2    ip6-allrouters
 0.0.0.0 app.adjust.world
 0.0.0.0 fembed.com
 0.0.0.0 www.fembed.com
-# 0.0.0.0 140.82.121.3
-# 0.0.0.0 houzz.com
+0.0.0.0 140.82.121.3
+0.0.0.0 houzz.com
 0.0.0.0 versicherungsvermittlung.de # <spyware and malware>
 0.0.0.0 www294.ff-01.com
 0.0.0.0 www369.ff-01.com
@@ -568,7 +568,6 @@ ff02::2    ip6-allrouters
 0.0.0.0 ade.googlesyndication.com
 0.0.0.0 ad-emea.doubleclick.net
 0.0.0.0 ad.es.doubleclick.net
-0.0.0.0 adeventtracker.spotify.com
 0.0.0.0 ad.fi.doubleclick.net
 0.0.0.0 ad.fr.doubleclick.net
 0.0.0.0 ad-g.doubleclick.net
@@ -1506,7 +1505,6 @@ ff02::2    ip6-allrouters
 0.0.0.0 feedads.g.doubleclick.net
 0.0.0.0 fe.video-ak.cdn.spotify.com
 0.0.0.0 ff.video-ak.cdn.spotify.com
-0.0.0.0 fls.doubleclick.net
 0.0.0.0 fls.uk.doubleclick.net
 0.0.0.0 fra02s28-in-f2.1e100.net
 0.0.0.0 fra100.ib.adnxs.com
@@ -3371,7 +3369,6 @@ ff02::2    ip6-allrouters
 0.0.0.0 tic1.vip.sc9.admob.com
 0.0.0.0 tic.googlesyndication.com
 0.0.0.0 t.myvisualiq.net
-# 0.0.0.0 tpc.googlesyndication.com
 0.0.0.0 tpc.googlesyndication.com.proxy.c9w.net
 0.0.0.0 tpcnc.googlesyndication.com
 0.0.0.0 tps.doubleverify.com
@@ -3904,14 +3901,13 @@ ff02::2    ip6-allrouters
 0.0.0.0 zhcn.admob.com
 0.0.0.0 zlink.app.spotify.com
 0.0.0.0 z.moatads.com
-
 # spotify-ad-hosts <https://raw.githubusercontent.com/theinfiniterick/spotify-ad-hosts/master/hosts.txt>
-# 0.0.0.0 163-172-209-161.rev.poneytelecom.eu
+0.0.0.0 163-172-209-161.rev.poneytelecom.eu
 # 0.0.0.0 a1.audio-ak.cdn.spotify.com
 # 0.0.0.0 accalia.ap.spotify.com
 # 0.0.0.0 accalia.ash.spotify.com
 # 0.0.0.0 accalia.ash1.spotify.com
-# 0.0.0.0 ad.atdmt.com
+0.0.0.0 ad.atdmt.com
 0.0.0.0 ad.audio-ak.cdn.spotify.com
 0.0.0.0 ad3.adfarm1.adition.com
 0.0.0.0 adlab.spotify.com
@@ -3919,7 +3915,7 @@ ff02::2    ip6-allrouters
 0.0.0.0 adobe-dns-2.spotify.com
 0.0.0.0 ads-static.saymedia.com
 0.0.0.0 ads.54646.co
-# 0.0.0.0 ads.bizhut.com
+0.0.0.0 ads.bizhut.com
 0.0.0.0 ads.spotify.com
 # 0.0.0.0 adserver-as.adtech.advertising.com
 # 0.0.0.0 adstudio-help.spotify.com
@@ -3936,7 +3932,7 @@ ff02::2    ip6-allrouters
 # #0.0.0.0 audio2.spotify.com
 # 0.0.0.0 media-match.com
 # 0.0.0.0 auditdesk-server.spotify.com
-# 0.0.0.0 austin.logs.roku.com
+0.0.0.0 austin.logs.roku.com
 0.0.0.0 be.ads.justpremium.com
 # 0.0.0.0 bengta.lon.spotify.com
 # 0.0.0.0 bengta.lon2.spotify.com
@@ -3953,8 +3949,8 @@ ff02::2    ip6-allrouters
 # 0.0.0.0 bundling-integration.spotify.com
 # 0.0.0.0 cdn.tellwrite.com
 # 0.0.0.0 christopher.lon.spotify.com
-# 0.0.0.0 crashdump-001.lon.spotify.com
-# 0.0.0.0 crashdump.sto.spotify.com
+0.0.0.0 crashdump-001.lon.spotify.com
+0.0.0.0 crashdump.sto.spotify.com
 # 0.0.0.0 desktop.spotify.com
 # 0.0.0.0 devnews.spotify.com
 # 0.0.0.0 dt.adsafeprotected.com
@@ -3964,7 +3960,7 @@ ff02::2    ip6-allrouters
 # 0.0.0.0 full-cdn-01.cluster001.ovh.net
 # 0.0.0.0 full-cdn-01.cluster002.ovh.net
 # 0.0.0.0 fw.adsafeprotected.com
-# # 0.0.0.0 gew1.ap.spotify.com
+# 0.0.0.0 gew1.ap.spotify.com
 # 0.0.0.0 googletagservices.com
 # 0.0.0.0 gs5j7zyhogb53dmqmjfqljsq2ykksm3.spotify.com
 # 0.0.0.0 guc-dealer-ssl.spotify.com
@@ -4008,10 +4004,10 @@ ff02::2    ip6-allrouters
 # 0.0.0.0 spotify-desktop.com
 # 0.0.0.0 star-z-mini.c10r.facebook.com
 # 0.0.0.0 sto3.spotify.com
-# 0.0.0.0 sync.adaptv.advertising.com
-# 0.0.0.0 techattend.com
-# 0.0.0.0 track.clearsender.com
-# #0.0.0.0 u.scdn.co
+0.0.0.0 sync.adaptv.advertising.com
+0.0.0.0 techattend.com
+0.0.0.0 track.clearsender.com
+# 0.0.0.0 u.scdn.co
 # 0.0.0.0 upgrade.scdn.co#optional
 # 0.0.0.0 upgrade.spotify.com#optional
 # #0.0.0.0 video-fa-b.cdn.spotify.com
