--- a/hosts.testing/kirils-hosts.1
+++ b/hosts.testing/kirils-hosts.1
@@ -12,6 +12,19 @@ ff02::1    ip6-allnodes
 ff02::2    ip6-allrouters
 
 # ------ start kiril-u's list ------
+0.0.0.0	encrypted-tbn0.gstatic.com
+0.0.0.0 config.edge.skype.com
+0.0.0.0 graph.facebook.com
+0.0.0.0 graph-fallback.facebook.com
+0.0.0.0 bt.t-ru.org
+0.0.0.0 bt4.t-ru.org
+# 0.0.0.0 userlocation.googleapis.com
+0.0.0.0 app-measurement.com
+0.0.0.0 beacon.shazam.com
+0.0.0.0 xp.apple.com
+0.0.0.0 device-metrics-us-2.amazon.com
+0.0.0.0 mobile-sdk-lib-eu-1.brilliantcollector.com
+0.0.0.0 traffic.megaphone.fm
 0.0.0.0 adeventtracker.spotify.com
 0.0.0.0 8242311.fls.doubleclick.net
 0.0.0.0 fls.doubleclick.net
