testing a bunch of spotify links

--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,6 +9,23 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 edge-web-gew1.dual-gslb.spotify.com
+0.0.0.0 gew1-spclient.spotify.com
+0.0.0.0 e673.dsce9.akamaiedge.net
+0.0.0.0 sc-gw.com
+0.0.0.0 dial.meet
+0.0.0.0 spotify.app.link
+0.0.0.0 spotify.test-app.link
+0.0.0.0 san12.shazam.map.fastly.net
+0.0.0.0 spotify-alternate.test-app.link
+0.0.0.0 auth-callback.spotify.com
+0.0.0.0 securepubads.g.doubleclick.net
+0.0.0.0 api-alexa-router.tplinknbu.com
+0.0.0.0 edge-web.dual-gslb.spotify.com
+0.0.0.0 krahsc.google.com
+0.0.0.0 a127f19e53a9411ea80b80689a129d10-666438813.eu-west-1.elb.amazonaws.com
+0.0.0.0 app-analytics-v2.snapchat.com
+0.0.0.0 adeventtracker.spotify.com
 0.0.0.0 location.services.mozilla.com
 0.0.0.0 ssl.google-analytics.com
 0.0.0.0 encrypted-tbn0.gstatic.com
