--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,19 +9,21 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
-0.0.0.0 edge-web-gew1.dual-gslb.spotify.com
-0.0.0.0 gew1-spclient.spotify.com
+0.0.0.0 ads.goodreads.com
+0.0.0.0 bookads.goodreads.com
+0.0.0.0 bookads2.goodreads.com
+0.0.0.0 rd.goodreads.com
+# 0.0.0.0 audio-fa-quic.spotifycdn.com
+0.0.0.0 www3.l.google.com
 0.0.0.0 e673.dsce9.akamaiedge.net
-0.0.0.0 sc-gw.com
 0.0.0.0 dial.meet
-0.0.0.0 spotify.app.link
-0.0.0.0 spotify.test-app.link
+# 0.0.0.0 spotify.app.link
+# 0.0.0.0 spotify.test-app.link
 0.0.0.0 san12.shazam.map.fastly.net
-0.0.0.0 spotify-alternate.test-app.link
-0.0.0.0 auth-callback.spotify.com
+# 0.0.0.0 spotify-alternate.test-app.link
+# 0.0.0.0 auth-callback.spotify.com
 0.0.0.0 securepubads.g.doubleclick.net
 0.0.0.0 api-alexa-router.tplinknbu.com
-0.0.0.0 edge-web.dual-gslb.spotify.com
 0.0.0.0 krahsc.google.com
 0.0.0.0 a127f19e53a9411ea80b80689a129d10-666438813.eu-west-1.elb.amazonaws.com
 0.0.0.0 app-analytics-v2.snapchat.com
@@ -112,4 +114,11 @@ ff02::2    ip6-allrouters
 0.0.0.0 gvt2.com
 0.0.0.0 mozgcp.net # <Web Analytics>
 0.0.0.0 addthis.com # <Ads>
+# ---DONT BLOCK THESE?---
+# edge-web.dual-gslb.spotify.com
+# audio-ak-spotify-com.akamaized.net
+# api.spotify.com
+# partners.wg.spotify.com
+# api-partner.spotify.com
+# sc-gw.com
 # ------ end kiril-u's list ------
