--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,6 +9,9 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 time-ios.apple.com
+0.0.0.0 time-a.nist.gov
+0.0.0.0 time-b.nist.gov <https://otx.alienvault.com/indicator/hostname/time-b.nist.gov>
 0.0.0.0 ads.goodreads.com
 0.0.0.0 bookads.goodreads.com
 0.0.0.0 bookads2.goodreads.com
