my decos still act weird

--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,6 +9,9 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 mmstat.com  
+0.0.0.0 bcmls2.glpals.com
+0.0.0.0 glpals.com
 0.0.0.0 time-ios.apple.com
 0.0.0.0 time-a.nist.gov
 0.0.0.0 time-b.nist.gov <https://otx.alienvault.com/indicator/hostname/time-b.nist.gov>
