--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,6 +9,8 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 amazon-adsystem.com
+0.0.0.0 s.amazon-adsystem.com
 0.0.0.0 bcmls2.glpals.com
 0.0.0.0 glpals.com
 0.0.0.0 time-ios.apple.com
