--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,6 +9,8 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 gihwyz.com
+0.0.0.0 s.gihwyz.com
 0.0.0.0 amazon-adsystem.com
 0.0.0.0 s.amazon-adsystem.com
 0.0.0.0 bcmls2.glpals.com
@@ -22,7 +24,7 @@ ff02::2    ip6-allrouters
 0.0.0.0 rd.goodreads.com
 # 0.0.0.0 audio-fa-quic.spotifycdn.com
 0.0.0.0 www3.l.google.com
-0.0.0.0 e673.dsce9.akamaiedge.net
+# 0.0.0.0 e673.dsce9.akamaiedge.net # interferes with music.apple.com
 0.0.0.0 dial.meet
 # 0.0.0.0 spotify.app.link
 # 0.0.0.0 spotify.test-app.link
