added a few israeli trackers

--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -1,6 +1,6 @@
 # Copyright (c) 2022-2023 kiril-u <https://github.com/kiril-u/orbit-pihole> see LICENSE
 # Part 1 of 6, contains: Kiril's List
-# Last Updated: 2023/Jan/29
+# Last Updated: 2023/Feb/01
 127.0.0.1  localhost
 127.0.1.1  orbit.loonaverse	orbit
 ::1        localhost ip6-localhost ip6-loopback
@@ -9,6 +9,17 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 stats.telebank.co.il
+0.0.0.0 news.telebank.co.il
+0.0.0.0 o83171.ingest.sentry.io
+0.0.0.0 ingest.sentry.io
+0.0.0.0 connect.facebook.net/he_IL/sdk.js
+0.0.0.0 connect.facebook.net/en_US/fbevents.js
+0.0.0.0 l5k.me # <Phishing and Other Frauds>
+0.0.0.0 links.f5h.co # <Bezeq spyware or spam>
+0.0.0.0 appsflyer.com
+0.0.0.0 adj.st
+0.0.0.0 y8cf.adj.st
 0.0.0.0 gihwyz.com
 0.0.0.0 s.gihwyz.com
 0.0.0.0 amazon-adsystem.com
@@ -68,6 +79,7 @@ ff02::2    ip6-allrouters
 0.0.0.0 www.mobile-messenger.intercom.com
 0.0.0.0 jads.co
 0.0.0.0 googletagmanager.com
+0.0.0.0 www.googletagmanager.com
 0.0.0.0 tsyndicate.com
 0.0.0.0 adsessionserv.com
 0.0.0.0 beacons.gvt2.com
