--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,6 +9,10 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 mixpanel.com
+0.0.0.0 connect.mixpanel.com
+0.0.0.0 api-js.mixpanel.com
+0.0.0.0 analytics.innologica.com
 0.0.0.0 stats.telebank.co.il
 0.0.0.0 news.telebank.co.il
 0.0.0.0 o83171.ingest.sentry.io
@@ -34,7 +38,7 @@ ff02::2    ip6-allrouters
 0.0.0.0 bookads2.goodreads.com
 0.0.0.0 rd.goodreads.com
 # 0.0.0.0 audio-fa-quic.spotifycdn.com
-0.0.0.0 www3.l.google.com
+# 0.0.0.0 www3.l.google.com
 # 0.0.0.0 e673.dsce9.akamaiedge.net # interferes with music.apple.com
 0.0.0.0 dial.meet
 # 0.0.0.0 spotify.app.link
@@ -54,8 +58,8 @@ ff02::2    ip6-allrouters
 0.0.0.0 config.edge.skype.com
 0.0.0.0 graph.facebook.com
 0.0.0.0 graph-fallback.facebook.com
-0.0.0.0 bt.t-ru.org
-0.0.0.0 bt4.t-ru.org
+# 0.0.0.0 bt.t-ru.org <rutracker>
+# 0.0.0.0 bt4.t-ru.org <rutracker>
 # 0.0.0.0 userlocation.googleapis.com
 0.0.0.0 app-measurement.com
 0.0.0.0 beacon.shazam.com
@@ -101,9 +105,9 @@ ff02::2    ip6-allrouters
 0.0.0.0 app.adjust.world
 0.0.0.0 fembed.com
 0.0.0.0 www.fembed.com
-0.0.0.0 140.82.121.3
-0.0.0.0 houzz.com
-0.0.0.0 versicherungsvermittlung.de # <spyware and malware>
+# 0.0.0.0 140.82.121.3
+# 0.0.0.0 houzz.com
+# 0.0.0.0 versicherungsvermittlung.de # <spyware and malware>
 0.0.0.0 www294.ff-01.com
 0.0.0.0 www369.ff-01.com
 0.0.0.0 godpvqnszo.com
