--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,6 +9,8 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 tags.tiqcdn.com
+0.0.0.0 tiqcdn.com # < Web Analytics >
 0.0.0.0 mixpanel.com
 0.0.0.0 connect.mixpanel.com
 0.0.0.0 api-js.mixpanel.com
