Added ads and trackers from Israeli newsites
Added some domains from: walla, ynet, and haaretz.
I'll probably check some non-left news sites
for ads and tracker domains next.

Signed-off-by: Kiril <kirilurivsky.isr@gmail.com>

--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -1,6 +1,6 @@
 # Copyright (c) 2022-2023 kiril-u <https://github.com/kiril-u/orbit-pihole> see LICENSE
 # Part 1 of 6, contains: Kiril's List
-# Last Updated: 2023/Feb/01
+# Last Updated: 2023/Feb/06
 127.0.0.1  localhost
 127.0.1.1  orbit.loonaverse	orbit
 ::1        localhost ip6-localhost ip6-loopback
@@ -9,8 +9,30 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 pushwoosh.com
+0.0.0.0 cdn.pushwoosh.com
+0.0.0.0 cp.pushwoosh.com
+0.0.0.0 polyfill.io
+0.0.0.0 outbrain.com
+0.0.0.0 script.crazyegg.com
+0.0.0.0 crazyegg.com
+0.0.0.0 cdn.valuad.cloud
+0.0.0.0 valuad.cloud
+0.0.0.0 smartlook.com # <Web Analytics>
+0.0.0.0 d1clufhfw8sswh.cloudfront.net
+0.0.0.0 ads.google.com
+0.0.0.0 taboola.com
+0.0.0.0 cdn.taboola.com
+0.0.0.0 llnwi.net # <?>
+0.0.0.0 upapi.net # <?>
+0.0.0.0 permutive.com
+0.0.0.0 cdn.permutive.com
+0.0.0.0 firstimpression.io
+0.0.0.0 ecdn.firstimpression.io
+0.0.0.0 brandmetrics.com
+0.0.0.0 cdn.brandmetrics.com
 0.0.0.0 tags.tiqcdn.com
-0.0.0.0 tiqcdn.com # < Web Analytics >
+0.0.0.0 tiqcdn.com # <Web Analytics>
 0.0.0.0 mixpanel.com
 0.0.0.0 connect.mixpanel.com
 0.0.0.0 api-js.mixpanel.com
