--- a/kirils-hosts.1
+++ b/kirils-hosts.1
@@ -9,6 +9,12 @@ ff02::2    ip6-allrouters
 
 0.0.0.0 0.0.0.0
 # ------ start kiril-u's list ------
+0.0.0.0 push.eye4.cn
+0.0.0.0 user2.ipcam.so
+0.0.0.0 authentication.eye4.cn
+0.0.0.0 ntp.eye4.cn
+0.0.0.0 eye4.cn
+0.0.0.0 www.baidu.com # <Temporary blocking baidu for testing>
 0.0.0.0 pushwoosh.com
 0.0.0.0 cdn.pushwoosh.com
 0.0.0.0 cp.pushwoosh.com
